--- a/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
+++ b/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
@@ -9,22 +9,21 @@
              MaxHeight="400px"
              Color="Color.Primary"
              @bind-SelectedValue="SelectedEntry">
-@*     <ItemTemplate>
+     <ItemTemplate>
         <MudTreeViewItem Value="@context.Value"
-                         Items=@(GetChildren(context))
                          LoadingIconColor="Color.Info"
-                         @bind-Expanded="@context.IsExpanded"
-                         @bind-Activated=context.IsSelected
-                         Text="@context.CanonicalName"
+                         @bind-Expanded="@context.Expanded"
+                         @bind-Activated=context.Selected
+                         Text="@context.Value.CanonicalName"
                          Icon="@Icons.Material.Filled.Folder"
-                         IconColor="@(context.IsSelected==true?Color.Primary:Color.Default)"
+                         IconColor="@(context.Selected==true?Color.Primary:Color.Default)"
                          Class="minw-max w-100"
-                         CanExpand=@(context is IADOrganizationalUnit)
+                         CanExpand=@(context.Value is IADOrganizationalUnit)
                           Context="treeContext"
-                         EndText="@EndText?.Invoke(context)">
+                         EndText="@EndText?.Invoke(context.Value)">
                          
         </MudTreeViewItem>
-    </ItemTemplate> *@
+    </ItemTemplate> 
 </MudTreeView>
 
 @if (RootOU == null || !RootOU.Any() || LoadingData)
