--- a/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
+++ b/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
@@ -8,14 +8,14 @@
             <MudTooltip Text="@AppLocalization["Discard Changes"]">
 
             <MudFab Color=Color.Error
-                    Icon="@Icons.Material.Outlined.Undo"
+                    StartIcon="@Icons.Material.Outlined.Undo"
                     OnClick="@(()=>{DiscardChanges.InvokeAsync();})" />
             </MudTooltip>
 
 
             <MudTooltip Text="@AppLocalization["Save Changes"]">
                 <MudFab Color=Color.Success
-                        Icon="@Icons.Material.Filled.Save"
+                        StartIcon="@Icons.Material.Filled.Save"
                         OnClick="@(()=>{SaveChanges.InvokeAsync();})" />
             </MudTooltip>
 
