--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -10,7 +10,7 @@
                  @bind-Text=@SearchTerm
                  @ref=AutoComplete
                  AutoFocus=@AutoFocus
-                 SearchFuncWithCancel="@GetResults"
+                 SearchFunc="@GetResults"
                  DebounceInterval=500
                  ResetValueOnEmptyText="true"
                  Validation="@Validation"
