--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -108,7 +108,7 @@
 
     <SettingsField Label="@AppLocalization["UseTLS"]">
 
-        <MudSwitch For="(()=>settings.UseTLS)" Label="@AppLocalization["UseTLS"]" @bind-Checked="@settings.UseTLS" />
+        <MudSwitch For="(()=>settings.UseTLS)" Label="@AppLocalization["UseTLS"]" @bind-Value="@settings.UseTLS" />
 
     </SettingsField>
 
