--- a/BLAZAMGui/Layouts/DirectoryConnectingIndicator.razor
+++ b/BLAZAMGui/Layouts/DirectoryConnectingIndicator.razor
@@ -3,10 +3,10 @@
 {
     <MudAlert Class="mud-alert-filled-warning">
 
-        <Row>
+        <MudStack Row=true>
             Connecting to Active Directory... Some features are disabled...
             <MudProgressLinear Indeterminate=true/>
-        </Row>
+        </MudStack>
     </MudAlert>
 }
 
