--- a/BLAZAMGui/UI/Settings/Notifications/EditNotificationSubscriptionRow.razor
+++ b/BLAZAMGui/UI/Settings/Notifications/EditNotificationSubscriptionRow.razor
@@ -74,7 +74,7 @@
     [Parameter]
     public EventCallback OnAdded { get; set; }
 
-    private async void ToggleType(NotificationType type, bool value)
+    private void ToggleType(NotificationType type, bool value)
     {
         if (!value)
         {
