--- a/BLAZAMGui/UI/Settings/Permissions/OUPermissionsEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/OUPermissionsEditor.razor
@@ -42,7 +42,7 @@
         {
             if (_node == value) return;
             _node = value;
-            OnOUChanged(_node);
+            _=OnOUChanged(_node);
 
         }
     }
