--- a/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
@@ -135,7 +135,7 @@
                         {
                             concatenatd += Directory.FindEntryBySID(sid) + ", ";
                         }
-                        catch (Exception ex)
+                        catch (Exception)
                         {
                             concatenatd += sid.ToSidString()+", ";
                         }
