--- a/BLAZAM/Pages/Users/ConfirmNewUser.razor
+++ b/BLAZAM/Pages/Users/ConfirmNewUser.razor
@@ -236,7 +236,7 @@ else
 
             try
             {
-                if (DirectoryTemplate.EffectiveSendWelcomeEmail == true)
+                if (DirectoryTemplate?.EffectiveSendWelcomeEmail == true)
                 {
                     if (DirectoryTemplate.EffectiveAskForAlternateEmail == true || User.Email.IsNullOrEmpty())
                     {
@@ -244,7 +244,7 @@ else
                     }
                     else
                     {
-                        SendWelcomeEmail(User.Email);
+                        _=SendWelcomeEmail(User.Email);
                     }
 
                 }
@@ -267,13 +267,13 @@ else
     {
         try{
             NewUserWelcomeEmailMessage message = new NewUserWelcomeEmailMessage();
-            message.Domain = User.Directory.ConnectionSettings.FQDN;
+            message.Domain = User.Directory.ConnectionSettings?.FQDN;
             message.Username = _username;
             message.Password = _userPassword;
             var html = message.Render();
             await EmailService.SendMessage(AppLocalization["New Account Details"], message,to);
             SnackBarService.Info(AppLocalization["Welcome Email Sent to "] + to);
-            SendWelcomeModal.Close();
+            SendWelcomeModal?.Close();
         }catch (Exception ex)
         {
             Loggers.SystemLogger.Error("Error sending welcome email {@Error}", ex);
