Reconnect on save during installation wizard

--- a/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAMGui/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -110,7 +110,7 @@
     public void ResetStatus()
     {
         //Directory = DirectoryFactory.CreateActiveDirectoryContext();
-        //Directory.ConnectAsync();
+        Directory.ConnectAsync();
         _portStatus = false;
         _credStatus = false;
         showProgress = true;
