Remove unnecessary JS code

--- a/BLAZAM/Pages/Login.razor
+++ b/BLAZAM/Pages/Login.razor
@@ -158,7 +158,7 @@
             }
             catch (Exception ex)
             {
-
+                Loggers.SystemLogger.Error("Error attempting logon {@Error}",ex);
                 SnackBarService.Info(ex.Message);
             }
 
