--- a/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
@@ -12,13 +12,13 @@
                  SelectedValueChanged=SelectedTemplateChanged
                  MaxHeight="400px">
     <ItemTemplate>
-        <MudTreeViewItem Selected=@(context.Value.Id.Equals(SelectedTemplate?.Id)!=true)
-                         Expanded="true"
+        <MudTreeViewItem Selected=@(context.Value.Id.Equals(SelectedTemplate?.Id)==true)
+                         Expanded="context.Expanded"
                          Items="@context.Children"
                          Value="@context.Value">
             <Content>
-                <MudTreeViewItemToggleButton Expanded="true"
-                                             Visible="@(context.HasChildren!=null)" />
+                <MudTreeViewItemToggleButton ExpandedChanged="@((state)=>{context.Expanded=state;})"
+                                             Visible="@(context.HasChildren)" />
 
                 <MudBadge Icon="@Icons.Material.Filled.VisibilityOff"
                           Visible=@(!context.Value.Visible)
