Cache all widget data

--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
@@ -48,7 +48,11 @@
     <MudProgressLinear Indeterminate=true />
 </MudOverlay>
 @code {
-    List<IDirectoryEntryAdapter> changdEntries { get; set; } = new();
+    List<IDirectoryEntryAdapter> changdEntries
+    {
+        get => CurrentUser.State.Cache.Get<List<IDirectoryEntryAdapter>>(this.GetType());
+        set => CurrentUser.State.Cache.Set(this.GetType(), value);
+    }
 
     protected override async Task OnInitializedAsync()
     {
