--- a/BLAZAMGui/UI/Dashboard/Widgets/DisabledUsersWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/DisabledUsersWidget.razor
@@ -22,8 +22,11 @@
     </div>
 </div>
 @code {
-    List<IADUser> LockedUsers = new();
-
+    List<IADUser> LockedUsers
+    {
+        get => CurrentUser.State.Cache.Get<List<IADUser>>(this.GetType());
+        set => CurrentUser.State.Cache.Set(this.GetType(), value);
+    }
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
