Fixes for paths

--- a/BLAZAMGui/UI/Settings/AvailableUpdate.razor
+++ b/BLAZAMGui/UI/Settings/AvailableUpdate.razor
@@ -37,6 +37,10 @@
                 </MudStack>
                 <MudText>@Update.PrequisiteMessage</MudText>
             }
+            @if(ApplicationInfo.InDebugMode && CurrentUser.State.IsSuperAdmin)
+            {
+                <MudText>@Update.UpdateCommand</MudText>
+            }
         </MudCard>
 
 
